src/css/NavBar.css
nav ul {
  list-style-type: none; /**removes bullet points**/
  margin: 0 auto;
  padding: 0;
  background-color: #ffffff;
  overflow: hidden; /** to avoid scrollbar **/
  max-width: 1200px;
}

nav li a {
  display: block; /** so we can change the padding **/
  color: black;
  text-align: center; /**for every link individually**/
  text-decoration: none; /** no underline for links **/
  padding-left: 25px;
  padding-right: 25px;
  padding-top: 14px;
  padding-bottom: 14px;
  font-family: "Amatic SC", "Open Sans Hebrew", Sans-serif;
  font-weight: bold;
  font-size: 20px;
  letter-spacing: 1px;
  border-bottom: 2px solid transparent;
}

/* Change the link color to #111 (black) on hover */
nav .withhover:hover {
  color: #ea8a8a;
  border-color: #ea8a8a;
}

nav ul {
  display: flex;
  align-items: center;
}

nav .active {
  color: #ea8a8a;
  border-color: #ea8a8a;
}

nav .smalllogo {
  width: 60px;
}

nav .textcontainer a {
  padding-right: 19px;
}
nav .smalllogocontainer a {
  padding-left: 0;
}

nav .smalllogotext {
  width: 150px;
}
nav .emptyspace {
  flex-grow: 1; /* this space will take as much space as it can and then the icons are pushed to the left */
}

nav .icon {
  color: #ab3b55;
}

/* nav {
  border-bottom: 1px dashed #999;
} */

